Fix popover z-index

--- a/packages/core/src/styles/Popover.scss
+++ b/packages/core/src/styles/Popover.scss
@@ -9,6 +9,7 @@ $component-name: #{$prefix}-popover;
     border-radius: $popover-border-radius;
     filter: drop-shadow($popover-drop-shadow);
     position: relative;
+    z-index: z(popover);
 
     // Elements
     &__arrow {
